--- a/tagging.html
+++ b/tagging.html
@@ -1,5 +1,9 @@
----
-permalink: /tagging
-redirect_to:
-  - https://www.cs.columbia.edu/cg/layercode/
----
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://www.cs.columbia.edu/cg/layercode/'" />
+  </head>
+  <body>
+    <p>Please follow <a href="https://www.cs.columbia.edu/cg/layercode/">this link</a>.</p>
+  </body>
+</html>
