--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
             </div>
         </div>
     </div>
-
 </header>
 
 <section id="about" class="bg-light-gray">
@@ -115,27 +114,26 @@
                     My research interests include <a target="_blank" href="https://www.physicsbasedanimation.com/ ">Physics-based Simulation</a>  <a target="_blank" href="https://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a>, and <a target="_blank" href="https://computational-fabrication.org/">Computational Fabrication</a>. 
                     <br> 
                     <br>
-                    <span style="color:red"><b>I am on the job market this year. If you are interested, please <a style="color:#880000;text-decoration: underline;", href="mailto:henrique@cs.columbia.edu">contact me</a>. 
+                    <span style="color:red"><b>I am on the job market this year. If you are interested, please <a style="color:#880000;text-decoration: underline;", href="mailto:henrique@cs.columbia.edu">contact me</a>! 
                     </b>
                 	</span>
-                    <br>!
+                    <br>
                 <br>
                 Currently, I am interested in <a target="_blank" href="https://henriquetmaia.github.io/candidacy">merging simulation techiniques with machine learning</a>, hoping to trade-off bottlenecks and inaccuracies with data-driven techniques.
-
-<!--                 To effectively address these settings, I have been developing frameworks for training <a target="_blank" href="https://en.wikipedia.org/wiki/Artificial_neural_network">neural networks</a> by leveraging alternative types of supervision, such as <a target="_blank" href="https://aclanthology.org/D19-1468/">domain-specific keywords</a>, <a target="_blank" href="https://aclanthology.org/D19-5501/">coarse labels</a>, <a target="_blank" href="https://aclanthology.org/2020.acl-main.751/">taxonomies</a>, and <a target="_blank" href="https://aclanthology.org/2021.naacl-main.66/">labeling rules</a>. 
-                 Collecting such types of high-level supervision is usually less expensive and potentially more expressive than annotating thousands of labeled examples. I have demonstrated the benefits of high-level supervision across multiple domains, languages, and tasks including knowledge graph construction, sentiment analysis, news document classification, topic extraction, cross-lingual learning, and <a target="_blank" href="https://publichealth.cs.columbia.edu/">mining social media for rare events related to public health</a>. -->
+                Machine-learning and model-reduction methods benefit from large demonstrative datasets; the more data present, the easier it becomes to converge on a solution.
+                Aggregating and formatting data is not easy however, examples are not always readily available and the collected samples must be labeled or tagged appropriately.
+                Fortunately, accurate simulations allow for the generation of limitless data under controlled scenarios. With every variable accounted for, the overhead of gathering and preparing the data dissapears.
+                Coming full circle, this data can then be used to train stable and efficient alternatives to physics simulations that can improve time-bound applications or even produce <a target="_blank" href="https://physicsbaseddeeplearning.org/intro.html">differentiable simulations</a> that can be tuned to achieve specific dynamics.
                 <br>
                 <br>
                 In the past, I have worked on tagging <a target="_blank" href="https://en.wikipedia.org/wiki/Object_hyperlinking">physical hyperlinks</a> onto <a target="_blank" href="https://ten-thousand-models.appspot.com/results.html?q=without+self-intersection">intricate everyday objects</a>, as well as exploring <a target="_blank" href="https://en.wikipedia.org/wiki/Side-channel_attack">side-channel</a> exploits of neural architechtures running on modern <a target="_blank" href="https://en.wikipedia.org/wiki/Graphics_processing_unit">GPUs</a>.
 
                 <br>
                 <br> 
-<!--                 Aside from research, I love <a target="_blank" href="img/bass.jpg">playing the bass guitar</a>, <a target="_blank" href="https://www.youtube.com/watch?v=U-DnD0wFyu4&feature=youtu.be">windsurfing</a>, <a target="_blank" href="https://www.instagram.com/Henrique.karaman/?hl=en">taking photos</a> and (of course) <a target="_blank" href="https://drive.google.com/open?id=1Hg-RXoDSAg1EN9HM81XvmO_KHM6L9q46&usp=sharing">traveling</a>. Updates: In summer 2019 in Seattle I got my <a target="_blank" href="">sailing</a> certificate; In summer 2020, I got into <a target="_blank" href="https://youtu.be/cHSSswS-qXU">drone videography</a>.  -->
-                
+                Outside of research you can find me playing &#9917; or &#127952;. I also love to cook and <a target="_blank" href="https://goo.gl/maps/hD7btmXxwXwmnMcy9">explore the food scene</a> around me, feel free to contact me for recommendations.                
                 <br>
                 <br>
-<!--                 I grew up in <a target="_blank" href="https://en.wikipedia.org/wiki/Sitia">Sitia</a>, a small town in eastern Crete that produces delicious <a target="_blank" href="https://en.wikipedia.org/wiki/Tsikoudia">tsikoudia</a> and has wonderful places around! Here are a few drone shots: <a target="_blank" href="https://youtu.be/vqTG5pFhONg">Vai Palm Beach</a>,  <a target="_blank" href="https://youtu.be/_Iqowck44js">Tenda Beach</a>. If you'd like to visit Crete, you should ask me for recommendations. -->
-
+                I am originally from <a target="_blank" href="https://en.wikipedia.org/wiki/S%C3%A3o_Paulo">São Paulo</a>, <a target="_blank" href="https://goo.gl/maps/vbP5vSw38zxB1AAK8">Brasil</a> but have spent the last few years living in <a target="=_blank" href="https://www.instagram.com/n_he_key/">New York City</a>.
                 <br>
                 <br>
 				For more information about me, see my <a target="_blank" href="pdf/henriqueTelesMaia_resume.pdf">resume</a> or <a class="page-scroll" href="#contact">contact me</a>. 
@@ -218,7 +216,7 @@
 
 					<div class="tl-item pub-item with-icon"><span class="item-section">2017</span>
 						<div class="elem-wrapper">
-							<img src="./img/uTokyo_logo.png" class="img-circle" width="67" height="70" vspace="0" hspace="0" style="display:block; margin-top:-10px; margin-left:-4px">
+							<img src="./img/uTokyo_logo.png" class="img-circle" width="60" height="60" vspace="0" hspace="0" style="display:block; margin-top:-10px; margin-left:-4px">
 						</div>
 						<div class="content-wrapper">
 							<h5 class="title">
@@ -232,7 +230,7 @@
 					</div>
 					<div class="tl-item pub-item with-icon"><span class="item-section">2017</span>
 						<div class="elem-wrapper">
-							<img src="./img/disneyAnim_logo.jpg" class="img-circle" width="50" height="50" vspace="0">
+							<img src="./img/disneyAnim_logo.jpg" class="img-circle" width="70" height="50" vspace="0">
 						</div>
 						<div class="content-wrapper">
 							<h5 class="title">
@@ -264,7 +262,7 @@
 						</div>
 						<div class="content-wrapper">
 							<h5 class="title">
-								<a target="_blank" href="http://www.ilsp.gr/en">"Adobe Systems Inc.</a>
+								<a target="_blank" href="http://www.ilsp.gr/en">Adobe Systems Inc.</a>
 							</h5>
 							<div class="description">
 								<p>Creative Technologies Lab Intern</p>
@@ -275,7 +273,7 @@
 
 					<div class="tl-item pub-item with-icon"><span class="item-section">2013</span>
 						<div class="elem-wrapper">
-							<img src="./img/1stDibs_logo.png" class="img-circle" width="50" height="50" vspace="0">
+							<img src="./img/1stDibs_logo.jpg" class="img-circle" width="55" height="55" vspace="0">
 						</div>
 						<div class="content-wrapper">
 							<h5 class="title">
@@ -401,7 +399,7 @@
  				</div>
  			</div>
  			<div class="col-lg-7 col-md-6 col-sm-7 col-xs-10 col-lg-offset-0 col-md-offset-1 col-sm-offset-2 col-xs-offset-1">
- 				<h4>Document Classification Across Languages With Minimal Resources</h4>
+ 				<h4>Feature Space Dynamics of Implicit Neural Representations</h4>
  				<h4><small>Work with Peter Chen and G Pershing</small><br></h4>
 <!--  				<h4><small>Advised by Luis Gravano and Daniel Hsu</small><br></h4>
  				<p style="text-align:justify;">
