--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <p><h3><center>Hello there!</center></h3>
                     <br>
                     I am a final-year Ph.D. Candidate in Computer Science at <a target="_blank" href="https://www.cs.columbia.edu/">Columbia University</a>, advised by Prof. <a target="_blank" href="https://www.dgp.toronto.edu/~eitan/">Eigan Grinspun</a> and Prof. <a target="_blank" href="http://www.cs.columbia.edu/~cxz/">Changxi Zheng</a>. 
-                    My research interests include <a target="_blank" href="https://www.physicsbasedanimation.com/ ">Physics-based Simulation</a>  <a target="_blank" href="https://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a>, and <a target="_blank" href="https://computational-fabrication.org/">Computational Fabrication</a>. 
+                    My research interests include <a target="_blank" href="https://www.physicsbasedanimation.com/ ">Physics-based Simulation</a>, <a target="_blank" href="https://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a>, and <a target="_blank" href="https://computational-fabrication.org/">Computational Fabrication</a>. 
                     <br> 
                     <br>
                     <span style="color:red"><b>I am on the job market this year. If you are interested, please <a style="color:#880000;text-decoration: underline;", href="mailto:henrique@cs.columbia.edu">contact me</a>! 
@@ -119,7 +119,7 @@
                 	</span>
                     <br>
                 <br>
-                Currently, I am interested in <a target="_blank" href="https://henriquetmaia.github.io/candidacy">merging simulation techiniques with machine learning</a>, hoping to trade-off bottlenecks and inaccuracies with data-driven techniques.
+                Currently, I am interested in <a target="_blank" href="https://henriquetmaia.github.io/candidacy">merging simulation techniques with machine learning</a>, hoping to trade-off bottlenecks and inaccuracies with data-driven techniques.
                 Machine-learning and model-reduction methods benefit from large demonstrative datasets; the more data present, the easier it becomes to converge on a solution.
                 Aggregating and formatting data is not easy however, examples are not always readily available and the collected samples must be labeled or tagged appropriately.
                 Fortunately, accurate simulations allow for the generation of limitless data under controlled scenarios. With every variable accounted for, the overhead of gathering and preparing the data dissapears.
@@ -130,10 +130,10 @@
 
                 <br>
                 <br> 
-                Outside of research you can find me playing &#9917; or &#127952;. I also love to cook and <a target="_blank" href="https://goo.gl/maps/hD7btmXxwXwmnMcy9">explore the food scene</a> around me, feel free to contact me for recommendations.                
+                Outside of research you can find me playing &#9917; or &#127952;. I also love to cook and <a target="_blank" href="https://goo.gl/maps/hD7btmXxwXwmnMcy9">explore the food scene</a> around me, feel free to contact me for recommendations!                
                 <br>
                 <br>
-                I am originally from <a target="_blank" href="https://en.wikipedia.org/wiki/S%C3%A3o_Paulo">São Paulo</a>, <a target="_blank" href="https://goo.gl/maps/vbP5vSw38zxB1AAK8">Brasil</a> but have spent the last few years living in <a target="=_blank" href="https://www.instagram.com/n_he_key/">New York City</a>.
+                I am originally from <a target="_blank" href="https://en.wikipedia.org/wiki/S%C3%A3o_Paulo">São Paulo</a>, <a target="_blank" href="https://goo.gl/maps/vbP5vSw38zxB1AAK8">Brasil</a> but have spent the last few years living and photographing <a target="=_blank" href="https://www.instagram.com/n_he_key/">New York City</a>.
                 <br>
                 <br>
 				For more information about me, see my <a target="_blank" href="pdf/henriqueTelesMaia_resume.pdf">resume</a> or <a class="page-scroll" href="#contact">contact me</a>. 
@@ -230,7 +230,7 @@
 					</div>
 					<div class="tl-item pub-item with-icon"><span class="item-section">2017</span>
 						<div class="elem-wrapper">
-							<img src="./img/disneyAnim_logo.jpg" class="img-circle" width="70" height="50" vspace="0">
+							<img src="./img/disneyAnim_logo.png" class="img-circle" width="70" height="50" vspace="0">
 						</div>
 						<div class="content-wrapper">
 							<h5 class="title">
@@ -244,7 +244,7 @@
 					</div>
 					<div class="tl-item pub-item with-icon"><span class="item-section">2015-2016</span>
 						<div class="elem-wrapper">
-							<img src="./img/uTAustin_logo.jpg" class="img-circle" width="50" height="50" vspace="0">
+							<img src="./img/uTAustin_logo.png" class="img-circle" width="50" height="50" vspace="0">
 						</div>
 						<div class="content-wrapper">
 							<h5 class="title">
@@ -370,7 +370,7 @@
 
  		<div class="row">
  			<div class="col-lg-3 col-md-3 col-sm-3 col-lg-offset-2 col-md-offset-1 col-sm-offset-0 col-xs-offset-1 overlaybluecontainer">
- 				<img src="img/proj/astra_overview.png" width="260" height="130">
+ 				<img src="img/nbv_fig.png" width="260" height="130">
  				<div class="overlay">
  					<div class="overlaytext" style="color:white;font-size:14px;">Next-best-view planning improves grasping success in unknown scenarios. 
  					</div>
@@ -392,7 +392,7 @@
 
  		<div class="row">
  			<div class="col-lg-3 col-md-3 col-sm-3 col-lg-offset-2 col-md-offset-1 col-sm-offset-0 col-xs-offset-1 overlaybluecontainer">
- 				<img src="img/world_languages.png" width="250" height="150">
+ 				<img src="img/implicitReduc.png" width="250" height="150">
  				<div class="overlay">
  					<div class="overlaytext" style="color:white;font-size:14px;">Networks allow for significant reduction of variables
  					</div>
@@ -413,7 +413,7 @@
 
  		<div class="row">
  			<div class="col-lg-3 col-md-3 col-sm-3 col-lg-offset-2 col-md-offset-1 col-sm-offset-0 col-xs-offset-1 overlaybluecontainer">
- 				<img src="img/proj/Amazon_taxonomy.png" width="260" height="170">
+ 				<img src="img/adonisTeaser.png" width="260" height="170">
  				<div class="overlay">
  					<div class="overlaytext" style="color:white;font-size:14px;">A simple baseline sim for experimentation.</div>
  				</div>
@@ -421,7 +421,7 @@
  			<div class="col-lg-7 col-md-6 col-sm-7 col-xs-10 col-lg-offset-0 col-md-offset-1 col-sm-offset-2 col-xs-offset-1">
  				<h4>GPU Discrete Elastic Rod Library</h4>
  				<h4><small>Work with Peter Chen and Mingxuan Li</small><br></h4>
- 				<h4><small>Advised by Eitan Grinspuna</small><br></h4>
+ 				<h4><small>Advised by Eitan Grinspun</small><br></h4>
 <!--  				<p style="text-align:justify;">
  					Product understanding is crucial for product search at Amazon.com or answering user's questions through Amazon's Alexa (personal assistant): 
  					``Alexa, add a family-size chocolate ice cream to my shopping list.''
@@ -470,7 +470,7 @@
 		<div class="row" id="seq">
 			<div class="col-lg-12">
 				<h4>Can one hear the shape of a neural network?:</h4>
-				<h4><small>Snooping the GPU via Magnetic Side Channel</small></h4>
+				<h4>Snooping the GPU via Magnetic Side Channel</h4>
 			</div>
 			<div class="col-md-12 text-muted">
 				<b>Henrique Teles Maia</b>, Chang Xiao, Dingzeyu Li, Eitan Grinspun, Changxi Zheng
