filling in candidacy page

--- a/candidacy.html
+++ b/candidacy.html
@@ -31,20 +31,33 @@
 
 		<div id="column_left">
 				<h5 id='bg'>Background</h5>
-					<tag id='kaufman14'></tag>
+					<tag id='rosenblatt1958'></tag>
+					<tag id='lecun1989'></tag>
+					<tag id='rumelhart1986'></tag>
+					<tag id='watkins1992'></tag>
+					<tag id='goodfellow2014'></tag>
 
 			<h3 id='SSSL'>Rendering & Geometry</h3>
 				<h5 id='bg'>ML for use in Production</h5>
-					<tag id='kaufman14'></tag>
+					<tag id='kallweit2017'></tag>
+					<tag id='holden2016'></tag>
+					<tag id='laine2017'></tag>
 
 				<h5 id='bg'>3D Modeling </h5>
-					<tag id='kaufman14'></tag>
+					<tag id='wei2016'></tag>
+					<tag id='wu2016'></tag>
+					<tag id='li2019'></tag>
+					<tag id='hanocka2019'></tag>
    	 	</div>
 
     	<div id ="column_mid">
 			<h3 id='SSSL'>Control</h3>
 				<h5 id='mpc'>Robotic Control Schemes</h5>
-					<tag id='kaufman14'></tag>
+					<tag id='peng2018c'></tag>
+					<tag id='peng2018c'></tag>
+					<tag id='peng2018c'></tag>
+					<tag id='peng2018c'></tag>
+					<tag id='peng2018c'></tag>
 
 				<h5 id='fcls'>Virtual Character Control</h5>
 					<tag id='kaufman14'></tag>
