added remaining papers to candidacy

--- a/candidacy.html
+++ b/candidacy.html
@@ -54,26 +54,42 @@
 			<h3 id='SSSL'>Control</h3>
 				<h5 id='mpc'>Robotic Control Schemes</h5>
 					<tag id='peng2018c'></tag>
-					<tag id='peng2018c'></tag>
-					<tag id='peng2018c'></tag>
-					<tag id='peng2018c'></tag>
-					<tag id='peng2018c'></tag>
+					<tag id='peng2018'></tag>
+					<tag id='belbuteperes2018'></tag>
+					<tag id='degrave2019'></tag>
+					<tag id='hu2019'></tag>
 
 				<h5 id='fcls'>Virtual Character Control</h5>
-					<tag id='kaufman14'></tag>
+					<tag id='holden2015'></tag>
+					<tag id='liu2017'></tag>
+					<tag id='peng2017'></tag>
+					<tag id='peng2018b'></tag>
+					<tag id='holden2017'></tag>
 
     	</div>
 
     	<div id="column_right">
 			<h3 id='SSSL'>Simulation </h3>
 				<h5 id='ai'>Deformables</h5>
-					<tag id='kaufman14'></tag>
+					<tag id='bailey2018'></tag>
+					<tag id='luo2017'></tag>
+					<tag id='wang2018'></tag>
+					<tag id='fulton2019'></tag>
+					<tag id='santesteban2019'></tag>
 
 				<h5 id='ai'>Fluids</h5>
-					<tag id='kaufman14'></tag>
+					<tag id='thuerey2019'></tag>
+					<tag id='um2018'></tag>
+					<tag id='xie2018'></tag>
+					<tag id='chu2017'></tag>
+					<tag id='kim2019'></tag>
 
 				<h5 id='ai'>Target Areas</h5>
 					<tag id='kaufman14'></tag>
+					<tag id='macklin2014'></tag>
+					<tag id='faure2008'></tag>
+					<tag id='guendelman2003'></tag>
+					<tag id='muller2015'></tag>
     	</div>
 	</div>
 </body>
