trying row for last sec

--- a/candidacy.html
+++ b/candidacy.html
@@ -84,6 +84,8 @@
 					<tag id='chu2017'></tag>
 					<tag id='kim2019'></tag>
 
+    	</div>
+    	<div id="row">
 				<h5 id='ai'>Target Areas</h5>
 					<tag id='kaufman14'></tag>
 					<tag id='macklin2014'></tag>
