--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" style="text-align:justify;">
                 <p><h3><center>Hello there!</center></h3>
                     <br>
-                    I am a final-year Ph.D. Candidate in Computer Science at <a target="_blank" href="https://www.cs.columbia.edu/">Columbia University</a>, advised by Prof. <a target="_blank" href="https://www.dgp.toronto.edu/~eitan/">Eigan Grinspun</a> and Prof. <a target="_blank" href="http://www.cs.columbia.edu/~cxz/">Changxi Zheng</a>. 
+                    I am a final-year Ph.D. Candidate in Computer Science at <a target="_blank" href="https://www.cs.columbia.edu/">Columbia University</a>, advised by Prof. <a target="_blank" href="https://www.dgp.toronto.edu/~eitan/">Eitan Grinspun</a> and Prof. <a target="_blank" href="http://www.cs.columbia.edu/~cxz/">Changxi Zheng</a>. 
                     My research interests include <a target="_blank" href="https://www.physicsbasedanimation.com/ ">Physics-based Simulation</a>, <a target="_blank" href="https://en.wikipedia.org/wiki/Machine_learning">Machine Learning</a>, and <a target="_blank" href="https://computational-fabrication.org/">Computational Fabrication</a>. 
                     <br> 
                     <br>
@@ -126,14 +126,14 @@
                 Coming full circle, this data can then be used to train stable and efficient alternatives to physics simulations that can improve time-bound applications or even produce <a target="_blank" href="https://physicsbaseddeeplearning.org/intro.html">differentiable simulations</a> that can be tuned to achieve specific dynamics.
                 <br>
                 <br>
-                In the past, I have worked on tagging <a target="_blank" href="https://en.wikipedia.org/wiki/Object_hyperlinking">physical hyperlinks</a> onto <a target="_blank" href="https://ten-thousand-models.appspot.com/results.html?q=without+self-intersection">intricate everyday objects</a>, as well as exploring <a target="_blank" href="https://en.wikipedia.org/wiki/Side-channel_attack">side-channel</a> exploits of neural architechtures running on modern <a target="_blank" href="https://en.wikipedia.org/wiki/Graphics_processing_unit">GPUs</a>.
+                In the past, I have worked on tagging <a target="_blank" href="https://en.wikipedia.org/wiki/Object_hyperlinking">physical hyperlinks</a> onto <a target="_blank" href="https://ten-thousand-models.appspot.com/results.html?q=without+self-intersection">intricate everyday objects</a>, as well as exploring <a target="_blank" href="https://en.wikipedia.org/wiki/Side-channel_attack">side-channel</a> exploits of neural architechtures running on modern <a target="_blank" href="https://en.wikipedia.org/wiki/Graphics_processing_unit">GPUs</a>. I also love to tinker, build, and hack. I've been known to augment 3D printers and <a target="_blank" href="https://www.engineering.columbia.edu/news/senior-design-expo-showcases-engineering-design-and-innovation">design award winning robots</a>. 
 
                 <br>
                 <br> 
-                Outside of research you can find me playing &#9917; or &#127952;. I also love to cook and <a target="_blank" href="https://goo.gl/maps/hD7btmXxwXwmnMcy9">explore the food scene</a> around me, feel free to contact me for recommendations!                
+                Outside of research you can find me playing &#9917; or &#127952;. I also love to cook and <a target="_blank" href="https://goo.gl/maps/hD7btmXxwXwmnMcy9">explore the food scene</a> around me, feel free to reach out to me for recommendations!                
                 <br>
                 <br>
-                I am originally from <a target="_blank" href="https://en.wikipedia.org/wiki/S%C3%A3o_Paulo">São Paulo</a>, <a target="_blank" href="https://goo.gl/maps/vbP5vSw38zxB1AAK8">Brasil</a> but have spent the last few years living and photographing <a target="=_blank" href="https://www.instagram.com/n_he_key/">New York City</a>.
+                I am originally from <a target="_blank" href="https://en.wikipedia.org/wiki/S%C3%A3o_Paulo">São Paulo</a>, <a target="_blank" href="https://goo.gl/maps/vbP5vSw38zxB1AAK8">Brasil</a> but have spent the last few years living in (and photographing) <a target="=_blank" href="https://www.instagram.com/n_he_key/">New York City</a>.
                 <br>
                 <br>
 				For more information about me, see my <a target="_blank" href="pdf/henriqueTelesMaia_resume.pdf">resume</a> or <a class="page-scroll" href="#contact">contact me</a>. 
@@ -224,7 +224,7 @@
 							</h5>
 							<div class="description">
 								<p>Visiting Scholar</p>
-								<p>Mentored by Yonghao Yue</p>
+								<p>Mentored by <a target="_blank" href="http://www.cs.columbia.edu/~yonghao/">Yonghao Yue</a></p>
 							</div>
 						</div>
 					</div>
@@ -238,7 +238,7 @@
 							</h5>
 							<div class="description">
 								<p>Technology and Innovation Research Intern</p>
-								<p>Mentored by Rasmus Tamstorf</p>
+								<p>Mentored by <a target="_blank" href="https://scholar.google.com/citations?user=Rlikd7QAAAAJ&hl=en">Rasmus Tamstorf</a></p>
 							</div>
 						</div>
 					</div>
@@ -252,7 +252,7 @@
 							</h5>
 							<div class="description">
 								<p>Visiting Scholar</p>
-								<p>Mentored by Etienne Vouga</p>
+								<p>Mentored by <a target="_blank" href="https://www.cs.utexas.edu/~evouga/">Etienne Vouga</a></p>
 							</div>
 						</div>
 					</div>
@@ -266,7 +266,7 @@
 							</h5>
 							<div class="description">
 								<p>Creative Technologies Lab Intern</p>
-								<p>Mentored by Danny Kaufman</p>
+								<p>Mentored by <a target="_blank" href="http://dannykaufman.io/">Danny Kaufman.</a></p>
 							</div>
 						</div>
 					</div>
