--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
  		<div class="row">
  			<div class="col-lg-3 col-md-3 col-sm-3 col-lg-offset-2 col-md-offset-1 col-sm-offset-0 col-xs-offset-1 overlaybluecontainer">
- 				<img src="img/nbv_fig.png" width="260" height="200">
+ 				<img src="img//Mobile_Manipulation_Leveraging_Multiple_Views.gif" width="260" height="200">
  				<div class="overlay">
  					<div class="overlaytext" style="color:white;font-size:14px;">Next-best-view planning improves grasping success in unknown scenarios. 
  					</div>
