added ACM news article link

--- a/index.html
+++ b/index.html
@@ -305,6 +305,14 @@
 				<br> <br>
 			</div>
 
+
+
+			<div class="row">
+				<div class="col-lg-1 col-md-2 col-sm-2 col-xs-2 col-lg-offset-2 col-md-offset-1 col-sm-offset-0 col-xs-offset-1 text-muted text-right">04/2022</div>
+				<div class="col-lg-8 col-md-7 col-sm-8 col-xs-8">ACM Communications <a target="_blank" href="https://cacm.acm.org/news/260184-magnetic-snoops-plunder-deep-learnings-secrets/fulltext">featured</a> our side-channel findings on Neural snooping!</div>
+			</div>
+			<br>
+
 			<div class="row">
 				<div class="col-lg-1 col-md-2 col-sm-2 col-xs-2 col-lg-offset-2 col-md-offset-1 col-sm-offset-0 col-xs-offset-1 text-muted text-right">11/2021</div>
 				<div class="col-lg-8 col-md-7 col-sm-8 col-xs-8">Paper accepted <a target="_blank" href="https://arxiv.org/abs/2109.07395">(preprint)</a> to <a target="_blank" href="https://www.usenix.org/conference/usenixsecurity22">USENIX</a> Security conference!</div>
