updated for IROS best paper nom

--- a/index.html
+++ b/index.html
@@ -306,6 +306,11 @@
 			</div>
 
 
+			<div class="row">
+				<div class="col-lg-1 col-md-2 col-sm-2 col-xs-2 col-lg-offset-2 col-md-offset-1 col-sm-offset-0 col-xs-offset-1 text-muted text-right">07/2022</div>
+				<div class="col-lg-8 col-md-7 col-sm-8 col-xs-8">Our paper on Mobile Manipulation Leveraging Multiple Views is named finalist for Best Paper Award at IROS 2022!</div>
+			</div>
+			<br>
 
 			<div class="row">
 				<div class="col-lg-1 col-md-2 col-sm-2 col-xs-2 col-lg-offset-2 col-md-offset-1 col-sm-offset-0 col-xs-offset-1 text-muted text-right">04/2022</div>
@@ -406,7 +411,7 @@
  				</div>
  			</div>
  			<div class="col-lg-7 col-md-6 col-sm-7 col-xs-10 col-lg-offset-0 col-md-offset-1 col-sm-offset-2 col-xs-offset-1">
- 				<h4>Feature Space Dynamics of Implicit Neural Representations</h4>
+ 				<h4>Continuous Reduced-Order Modeling of PDEs</h4>
  				<h4><small>Work with Peter Chen and G Pershing</small><br></h4>
 <!--  				<h4><small>Advised by Luis Gravano and Daniel Hsu</small><br></h4>
  				<p style="text-align:justify;">
@@ -460,16 +465,32 @@
 
 		<div class="row" id="seq">
 			<div class="col-lg-12">
+				<h4>CROM: Continuous Reduced-Order Modeling of PDEs Using Implicit Neural Representations</h4>
+			</div>
+			<div class="col-md-12 text-muted">
+				Peter Yichen Chen, Jinxu Xiang, Dong Heon Cho, G A Pershing, <b>Henrique Teles Maia</b>, Maurizio Chiaramonte, Kevin Carlberg, Eitan Grinspun
+			</div>
+			<div class="col-md-12 text-muted">
+				Submitted to NeurIPS 2022
+			</div>
+			<div class="col-md-12">
+				[<a target="_blank" href="https://arxiv.org/abs/2206.02607">ArXiv</a>]
+			</div>
+		</div>
+		<br>
+
+		<div class="row" id="seq">
+			<div class="col-lg-12">
 				<h4>Mobile Manipulation Leveraging Multiple Views</h4>
 			</div>
 			<div class="col-md-12 text-muted">
 				David Watkins-Valls, <b>Henrique Maia</b>, Jacob Varley, Madhavan Seshadri, Jonathan Sanabria, Nicholas Waytowich, Peter Allen
 			</div>
 			<div class="col-md-12 text-muted">
-				Under Submission at ICRA 2022 
+				Accepted to IROS 2022, Best Paper Award Finalist
 			</div>
 			<div class="col-md-12">
-				[<a target="_blank" href="https://arxiv.org/abs/2110.00717">ArXiv</a>]
+				[<a target="_blank" href="https://arxiv.org/abs/2110.00717">ArXiv preprint</a>]
 			</div>
 		</div>
 		<br>
